Fix code sample height with scrollbars (#575)
* Fixes Issue #555

* Fixes Issue #555 with upgrades

* Using flexbox to solve the height of the boxes

--- a/css/prism.css
+++ b/css/prism.css
@@ -51,12 +51,13 @@ code[class*="language-"]::selection, code[class*="language-"] ::selection {
 pre[class*="language-"] {
 	padding: 1em;
 	margin: 0;
-	overflow: auto;
+	height: 100%;
 }
 
 :not(pre) > code[class*="language-"],
 pre[class*="language-"] {
 	background: #fdfaeb;
+	overflow: auto;
 }
 
 /* Inline code */
